# xTea

./: .gitattributes  .gitignore  AlleleFraction.py  Dockerfile  L1_3.fa.fasta  NOTES.md  README.md  TE.bed  TEA_filter.py  breakpoint.py  bwa_align.py  bwa_align_backup.py  candidate_disc_filtered_cns_high_confident.txt  check_hic.py  classify_TE_insertion_from_rmsk.py  clip_read.py  cmd_runner.py  cvt_hdf5_fa_pacbio.py  data_processing.py  downloads.sh  global_values.py  gnrt_pipeline.py  gnrt_pipeline_cloud.py  gnrt_pipeline_cloud_v38.py  gnrt_pipeline_local.py  gnrt_pipeline_local_long_read_v38.py  gnrt_pipeline_local_v38.py  internal_mutation.py  intervaltree.py  l_LINE1_masker.py  l_MEI_caller.py  l_Mitochondria_masker.py  l_SVA_masker.py  l_TSD.py  l_algnmt_breakpoints.py  l_asm.py  l_clip_collect.py  l_combined_masker.py  l_complex_sv.py  l_contig.py  (+91 more)
Demo/: demo_readme.md  run_gnrt_pipeline.sh  sample_bam.txt  sample_id.txt  test.bam  test.bam.bai
genotyping/: check_gntp_consistency_ceu_pedigree_17.py  feature_importance.csv
params/: default_params.toml  params_for_bin_xtea.toml  params_preprocess.toml
recipes/: build_command.sh
src/: xtea_parser.py
tests/: TODO.py  test_TELocator.py
xTea/: bwa_align.py  gnrt_pipeline_local.py  internal_mutation.py  x_TEA_main_simple.py  x_alignments.py  x_clip_disc_filter.py  x_contig.py  x_genotype_classify.py  x_gvcf.py  x_mutation.py  x_post_filter.py  x_transduction.py
xtea/: README.md  bwa_align.py  clip_read.py  disc_cluster.py  global_values.py  gnrt_pipeline.py  gnrt_pipeline_cloud.py  gnrt_pipeline_local.py  (+57 more)
(+102 files in other folders)
